Fix background image jumping around on mobile

--- a/src/static/css/player.css
+++ b/src/static/css/player.css
@@ -32,8 +32,8 @@ kbd {
     top: 0;
     left: 0;
 
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
 
     z-index: -1;
 
